[tool.poetry]
name = "try-to-deploy"
version = "0.1.0"
description = ""
authors = ["juzun <zaplejtalja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.28.1"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
